# maratona_python

./: built_in_functions.py  dict.py  jobs.csv  list.py  list_tuples.py  main.py  operators.py  pyproject.toml
day_01/: list.py  operators.py  tuple.py
day_02/: function.py  return_func.py
day_03/: calc.py  flow.py  for_loop.py  modules.py
day_04/: request.py
day_05/: beautiful_soap.py  bs.py
day_06/: indeed.py  web_scrapping.py
day_07/: indeed.py  save.py  stackoverflow.py  web_scrapping.py
day_08/: main_flask.py  scrapping.py
day_10/: selenium.py  selenium_instagram.py
templates/: result.html  search.html
