[tool.poetry]
name = "python"
version = "0.1.0"
description = ""
authors = ["repl.it user <replituser@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
humanizer-portugues = "^2.4.0"
requests = "^2.25.1"
bs4 = "^0.0.1"
Flask = "^1.1.2"
selenium = "^3.141.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
